# LostandFound

./: README.md  main.py  pyproject.toml
app/utils/: createtable.py  hash.py  tokenvalidation.py
backend/: .env-example  main.py  pyproject.toml
backend/app/models/: categorymodels.py  claimmodels.py  itemmodels.py  usersmodel.py
backend/app/routes/: adminroutes.py  claimroutes.py  itemroutes.py  userroutes.py
backend/app/utils/: cloudinary.py  createtable.py  database.py  oauth.py  tokenvalidation.py
ui/: package-lock.json
ui/src/: App.jsx
