[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncmy>=0.2.11",
    "pwdlib[argon2]>=0.3.0",
    "cryptography>=48.0.0",
    "fastapi[standard]>=0.136.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.49",
    "jwt>=1.4.0",
    "python-jose[cryptography]>=3.5.0",
]
