[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncmy>=0.2.11", # async driver betn sql and application
    "pwdlib[argon2]>=0.3.0", # pass hashing
    "cryptography>=48.0.0", # hashing algos
    "fastapi[standard]>=0.136.1", # main library
    "python-dotenv>=1.2.2", # handle .env files
    "sqlalchemy[asyncio]>=2.0.49", # main driver for db
    "jwt>=1.4.0", # jsonwebtoken generation
    "python-jose[cryptography]>=3.5.0", # hashing algos
    "cloudinary>=1.44.2", # handle images
    "python-multipart>=0.0.29", #handle files upload
]
